# todoist-cli-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: todoist-cli-rs-CI.yml
docs/: design_doc.md
todoist-core/: Cargo.toml
todoist-core/src/: lib.rs
todoist-core/src/types/: colors.rs  dates.rs  filters.rs  items.rs  labels.rs  mod.rs  priority.rs  projects.rs  sections.rs
todoist-plugins/: Cargo.toml
